--- a/app/src/main/res/layout/dialog_alert_common_layout.xml
+++ b/app/src/main/res/layout/dialog_alert_common_layout.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="269.33dip"
     android:layout_height="wrap_content"
-    android:background="@drawable/alert_bg"
+    android:background="@mipmap/alert_bg"
     android:orientation="vertical" >
     
  	<!-- Title -->
